[tool.poetry]
name = "cambio001"
version = "0.1.0"
description = ""
authors = ["Vero D <vdguerrero1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torchaudio = "^0.13.1"
transformers = "^4.26.1"
speechbrain = "^0.5.13"
torch = "^1.13.1"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
