[tool.poetry]
name = "cambio001"
version = "0.1.0"
description = ""
authors = ["Vero D <vdguerrero1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torchaudio = "^0.13.1"
transformers = "^4.26.1"
speechbrain = "^0.5.13"
torch = "^1.13.1"
soundfile = "^0.12.1"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.6"
requests = "^2.28.2"
llvmlite = "^0.39.1"
librosa = "^0.10.0.post2"
tensorflow = "^2.12.0"
tensorflow-io = "^0.31.0"
pydub = "^0.25.1"
zipfile36 = "^0.1.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
